# daydream

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  CODEREVIEW.md  DESIGN.md  FIRST-FABLE.md  GOAL.md  README.md  SECURITY.md  SPEC.md  TESTING.md  WHIMSY.md  pyproject.toml
daydream/: __init__.py  __main__.py  admin.py  assets.py  clock.py  combat.py  config.py  db.py  drift.py  drift_samples.py  events.py  growth.py  items.py  lighting.py  memories.py  objects.py  parser.py  pronouns.py  retell.py  review.py  rooms.py  rules.py  server.py  toons.py  verbs.py  version.py  voice_samples.py  worldstate.py  worldverbs.py
daydream/api/: __init__.py  access.py  auth.py  csrf.py  nocache.py  slots.py  world.py  ws.py
daydream/gpu/: __init__.py  arbiter.py
daydream/images/: __init__.py  cache.py  cli.py  client.py
daydream/llm/: __init__.py  bootstrap.py  client.py  format2.py  prompts.py  safety.py
daydream/skills/: __init__.py  core.py  data.py  effects.py  interpreter.py  registry.py
daydream/testing/: __main__.py  human_eval.py  vision_gate.py
docs/: gpu-and-models.md
docs/mockups/: README.md  gallery.html
migrations/: 001_initial.sql  002_generated_assets.sql  003_assets_world_and_pin.sql  004_multi_room.sql  005_skills_description.sql  006_first_npc.sql  007_npc_presence.sql  008_second_npc.sql  009_memories.sql  010_starting_room.sql  011_objects.sql  012_world_version.sql  013_world_state.sql  014_event_recipient.sql  015_put_verb.sql
skills/: forge.json  iris.json  rook.json
tests/: conftest.py  test_access_middleware.py  test_admin.py  test_arbiter.py  test_assets.py  test_auth.py  test_bootstrap.py  test_clock.py  test_combat.py  test_containers.py  test_csrf_middleware.py  test_data_skills.py  test_db.py  test_dialogue_voice.py  test_drift.py  test_drift_samples.py  test_effects.py  test_events.py  test_format2.py  test_frontend.py  test_frontend_zork.py  test_game_script.py  test_game_script.sh  test_generative.py  test_growth.py  test_image_cache.py  test_image_client.py  test_image_test_cli.py  test_linkify.py  test_llm_client.py  test_memories.py  test_movement.py  test_no_world_literals.py  test_npc_voice.py  test_objects.py  test_parser.py  test_parser_zork.py  test_quest_playthrough.py  test_retell.py  test_review.py  (+36 more)
tests/baselines/: arbiter_smoke.golden.json  growth_compose_cedar_kitchen.golden.json  growth_compose_mossy_stair.golden.json  growth_compose_moth_attic.golden.json  image_cozy_room.golden.json  image_forest_path.golden.json  image_forge.golden.json  image_meadow_dusk.golden.json  image_zork_dam.golden.json  image_zork_torch_room.golden.json  image_zork_west_of_house.golden.json  llm_echo_json.golden.json  llm_narrate_fragment.golden.json  llm_route_skill.golden.json  llm_skill_interpret.golden.json  llm_state_mutate.golden.json  memory_ranking.golden.json  retell_probe_zork1.golden.json
tests/data/: zork1_walkthrough.json
tests/drift/: conftest.py  test_arbiter_smoke.py  test_design_tokens.py  (+9 more)
tools/: arbiter-smoke.py  assemble_world.py  gen_placeholder.py  ws_playthrough.py  zork_oracle.py
web/: index.html
worlds/: bunny.json  clockmakers-loft.json  zork1.json
(+49 files in other folders)
