[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daydream"
version = "0.0.1"
description = "A small atmospheric multiplayer web game running on a single dev box."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "litellm>=1.40",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "httpx>=0.27",
    # NPC memory retrieval. Brings torch + transformers + numpy
    # transitively. Use `bin/memory-bootstrap` for the CPU-only torch
    # wheel install path (~200 MB) so we don't pull the ~1.5 GB CUDA
    # libs we never use; embedding runs on CPU by construction.
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    # Pillow: drift probes under tests/drift/ compute a perceptual dHash
    # from generated PNGs. Pillow was already transitively present in the
    # venv; pinning here makes it explicit and durable.
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
include = ["daydream*"]
exclude = ["tests*", "web*", "migrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "real_image_gen: test exercises the real ws._generate_and_emit path; opts out of the conftest auto-mock and is responsible for mocking the ComfyUI client itself.",
    "tier_short: unit / fast; no app boot, no subprocess, no GPU. Target for pre-commit runs.",
    "tier_medium: integration; boots TestClient, spawns subprocesses, or does heavy filesystem I/O. Mocks GPU calls. Target for pre-push runs.",
    "tier_long: real-GPU drift probe or live end-to-end; requires vLLM and/or ComfyUI reachable. Expensive; pair with requires_vllm / requires_comfyui so absent engines skip cleanly.",
    "requires_vllm: skip if vLLM is unreachable at DAYDREAM_LLM_BASE_URL. Checked once per test session.",
    "requires_comfyui: skip if ComfyUI is unreachable at DAYDREAM_COMFYUI_BASE_URL. Checked once per test session.",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
